ADD_DEFINITIONS("-DMYSQL_CLIENT")
ADD_DEFINITIONS("-w")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_EXECUTABLE(client_test_dbg client_test_dbg.cpp)
TARGET_LINK_LIBRARIES(client_test_dbg mysqlclient)
SET_TARGET_PROPERTIES(client_test_dbg PROPERTIES LINKER_LANGUAGE CXX)

INSTALL(TARGETS client_test_dbg DESTINATION ${INSTALL_BINDIR} COMPONENT Test)
